force-app/main/default/objects/Certification_Exam__c/Certification_Exam__c.object-meta.xml
<CustomObject>
    <description>A vendor certification players can study for.</description>
    <label>Certification Exam</label>
    <nameField>
        <label>Certification Exam Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certification Exams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>