force-app/main/default/objects/Certification_Exam__c/fields/Certification_Code__c.field-meta.xml
<CustomField>
    <fullName>Certification_Code__c</fullName>
    <label>Certification Code</label>
    <type>Text</type>
    <unique>true</unique>
    <externalId>true</externalId>
    <length>80</length>
    <length>80</length>
</CustomField>