force-app/main/default/objects/Certification_Exam__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>Published exam cost in USD.</description>
    <label>Cost (USD)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>