force-app/main/default/objects/Certification_Exam__c/fields/Default_Timer_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Default_Timer_Seconds__c</fullName>
    <label>Default Timer Seconds</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>