force-app/main/default/objects/Certification_Exam__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description
    >Difficulty level published by the vendor (Entry, Intermediate, Advanced, Specialist, Architect, etc.).</description>
    <label>Level</label>
    <length>60</length>
    <type>Text</type>
</CustomField>