force-app/main/default/objects/Certification_Exam__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Free-form notes about the exam (retirement schedule, prerequisites, special instructions).</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>