force-app/main/default/objects/Certification_Exam__c/fields/Official_Exam_Guide_URL__c.field-meta.xml
<CustomField>
    <fullName>Official_Exam_Guide_URL__c</fullName>
    <label>Official Exam Guide URL</label>
    <type>Url</type>
</CustomField>