force-app/main/default/objects/Certification_Exam__c/fields/Premium_Only__c.field-meta.xml
<CustomField>
    <fullName>Premium_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premium Only</label>
    <type>Checkbox</type>
</CustomField>