force-app/main/default/objects/Certification_Exam__c/fields/Role_Family__c.field-meta.xml
<CustomField>
    <fullName>Role_Family__c</fullName>
    <label>Role Family</label>
    <type>Text</type>
    <length>255</length>
</CustomField>