force-app/main/default/objects/Certification_Exam__c/fields/Track__c.field-meta.xml
<CustomField>
    <fullName>Track__c</fullName>
    <description
    >Career track or role family the exam belongs to (Admin, Developer, Architect, Marketing, etc.).</description>
    <label>Track</label>
    <length>120</length>
    <type>Text</type>
</CustomField>